--- a/index.html
+++ b/index.html
@@ -6,22 +6,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="./style/responsive.css">
+  <!-- font cdn -->
+  <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
   <title>My Gym complex</title>
 </head>
 
 <body>
-  <nav class="nav-container">
-    <div class="logo">
-      <h1>Fitness</h1>
+  <header class="header-container">
+
+    <div class="header-content">
+      <!-- nav item start -->
+      <nav class="nav-container">
+        <div class="logo">
+          <h1>Fitness</h1>
+        </div>
+        <ul class="nav-items">
+          <input class="btn-primary" type="button" value="Home">
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </nav>
     </div>
-    <ul class="nav-items">
-      <input class="btn-primary" type="button" value="Home">
-      <li><a href="#">Service</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
-  </nav>
-  <!-- nav item end -->
+    <!-- banner section start -->
+    <div class="banner-container">
+      <div class="banner-text">
+        <h1 class="banner-titel">
+          Get body in <span id="font-miama">shape</span> & stay healthy
+        </h1>
+        <p id="banner-description">Transform your physique and maintain optimal health with our comprehensive fitness
+          guide. Discover effective workouts
+          and nutrition tips for a balanced, sustainable lifestyle</p>
+
+        <div class="btn-items">
+          <button class="btn-primary">Join Club Now!</button>
+          <button class="white-btn">Dawnload App</button>
+        </div>
+      </div>
+
+      <div class="banner-img-container">
+        <div class="banner-img">
+          <img src="images/Images 2.png" alt="">
+
+          <div class="box-1">
+            <h1>500+</h1>
+            <p>Free Workout Videos</p>
+          </div>
+
+        </div>
+
+        <div class="box-2">
+          <div class="div-ball">
+
+          </div>
+          <div class="text">
+            <h1>350+</h1>
+            <p>video tutorial</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 
 </body>
 
