--- a/index.html
+++ b/index.html
@@ -6,45 +6,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="./style/responsive.css">
-  <!-- font cdn -->
+  <!-- fonts cdn -->
   <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
+
+  <!-- font cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>My Gym complex</title>
 </head>
 
 <body>
-  <header class="header-container">
-
-    <div class="header-content">
-      <!-- nav item start -->
-      <nav class="nav-container">
-        <div class="logo">
-          <h1>Fitness</h1>
-        </div>
-        <ul class="nav-items">
-          <input class="btn-primary" type="button" value="Home">
-          <li><a href="#">Service</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-      </nav>
-    </div>
-    <!-- banner section start -->
-    <div class="banner-container">
-      <div class="banner-text">
-        <h1 class="banner-titel">
-          Get body in <span id="font-miama">shape</span> & stay healthy
-        </h1>
-        <p id="banner-description">Transform your physique and maintain optimal health with our comprehensive fitness
-          guide. Discover effective workouts
-          and nutrition tips for a balanced, sustainable lifestyle</p>
-
-        <div class="btn-items">
-          <button class="btn-primary">Join Club Now!</button>
-          <button class="white-btn">Dawnload App</button>
-        </div>
+  <header>
+    <!-- nav item start -->
+    <nav class="nav-container">
+      <div class="logo">
+        <h1>Fitness</h1>
       </div>
+      <ul class="nav-items">
+        <input class="btn-primary" type="button" value="Home">
+        <li><a href="#">Service</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
 
-      <div class="banner-img-container">
+      <div class="bars-icon">
+        <i class="fa-solid fa-bars fa-2xl"></i>
+      </div>
+    </nav>
+
+    <!-- banner section start -->
+    <section class="banner-container">
+      <div class="banner-content">
+
+        <div class="banner-text">
+          <h1 class="banner-titel">
+            Get body in <span id="font-miama">shape</span> & stay healthy
+          </h1>
+          <p id="banner-description">Transform your physique and maintain optimal health with our comprehensive fitness
+            guide. Discover effective workouts
+            and nutrition tips for a balanced, sustainable lifestyle</p>
+
+          <div class="btn-items">
+            <button class="btn-primary">Join Club Now!</button>
+            <button class="white-btn">Dawnload App</button>
+          </div>
+        </div>
+
         <div class="banner-img">
           <img src="images/Images 2.png" alt="">
 
@@ -53,20 +62,73 @@
             <p>Free Workout Videos</p>
           </div>
 
-        </div>
+          <div class="box-2">
+            <div class="div-ball">
 
-        <div class="box-2">
-          <div class="div-ball">
-
-          </div>
-          <div class="text">
-            <h1>350+</h1>
-            <p>video tutorial</p>
+            </div>
+            <div class="text">
+              <h1>350+</h1>
+              <p>video tutorial</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+
+
+
+
+
+      </di>
+    </section>
   </header>
+
+
+  <section class="habit-section">
+    <h1 id="titel-habit">Change Your Habits</h1>
+    <p id="habit-description">Start your day with clarity by dedicating 10 minutes to mindful meditation each morning
+    </p>
+    <div class="habit-container">
+      <div class="img-box">
+        <img src="images/image 2.png" alt="">
+        <h3>Movement</h3>
+        <p>im a ready for dayli my movement improve</p>
+      </div>
+      <div class="img-box">
+        <img src="images/image 3.png" alt="">
+        <h3>Time</h3>
+        <p>Time is the power of dayli habit</p>
+      </div>
+      <div class="img-box">
+        <img src="images/image 4.png" alt="">
+        <h3>Practice</h3>
+        <p>Dont be stop dayli practice gym and run extra mile</p>
+      </div>
+      <div class="img-box">
+        <img src="images/image 5.png" alt="">
+        <h3>Weight Loss</h3>
+        <p>I am focosud my Weight normal or high</p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="runbox-section">
+    <div class="runbox-container">
+      <div class="runbox-text">
+        <h1 id="box-titel">Run an Extra Mile Easily</h1>
+        <p id="box-description">Discover tips and techniques to make running that extra mile feel effortless. Boost your
+          endurance and enjoy
+          every step
+          of your journey.</p>
+        <button id="btn-run" class="btn-primary">Join Now</button>
+      </div>
+
+      <div class="runbox-img">
+        <img src="images/run.jpg" alt="">
+      </div>
+    </div>
+
+  </section>
 
 </body>
 
