meet section done

--- a/index.html
+++ b/index.html
@@ -199,6 +199,60 @@
     </div>
   </section>
 
+  <section class="meet-section">
+    <div class="meet-header">
+      <h1>Meet Our Team</h1>
+      <p>Meet my team and i have a soliution and diside you are perfect or not for gym</p>
+    </div>
+
+    <div class="meet-container">
+      <div class="meet-images">
+        <img src="images/trainer1.png" alt="">
+        <div class="meet-text">
+          <h3>Tawhid</h3>
+          <p>trainer</p>
+        </div>
+      </div>
+
+      <div class="meet-images">
+        <img src="images/trainer2.png" alt="">
+        <div class="meet-text">
+          <h3>Shanto</h3>
+          <p>trainer</p>
+        </div>
+      </div>
+      <div class="meet-images">
+        <img src="images/trainer3.png" alt="">
+        <div class="meet-text">
+          <h3>Yasin</h3>
+          <p>trainer</p>
+        </div>
+      </div>
+      <div class="meet-images">
+        <img src="images/trainer4.png" alt="">
+        <div class="meet-text">
+          <h3>Efat</h3>
+          <p>trainer</p>
+        </div>
+      </div>
+      <div class="meet-images">
+        <img src="images/trainer5.png" alt="">
+        <div class="meet-text">
+          <h3>Suhan</h3>
+          <p>trainer</p>
+        </div>
+      </div>
+      <div class="meet-images">
+        <img src="images/trainer6.png" alt="">
+        <div class="meet-text">
+          <h3>Shakib</h3>
+          <p>trainer</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
 </body>
 
 </html>
