added section meet new section bloge and footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
   <title>My Gym complex</title>
 </head>
 
@@ -29,6 +28,7 @@
         <li><a href="#">Service</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="#">Our Blog</a></li>
       </ul>
 
       <div class="bars-icon">
@@ -39,21 +39,19 @@
     <!-- banner section start -->
     <section class="banner-container">
       <div class="banner-content">
-
         <div class="banner-text">
           <h1 class="banner-titel">
             Get body in <span id="font-miama">shape</span> & stay healthy
           </h1>
-          <p id="banner-description">Transform your physique and maintain optimal health with our comprehensive fitness
+          <p id="banner-description">
+            Transform your physique and maintain optimal health with ourcomprehensive fitness
             guide. Discover effective workouts
             and nutrition tips for a balanced, sustainable lifestyle</p>
-
           <div class="btn-items">
             <button class="btn-primary">Join Club Now!</button>
             <button class="white-btn">Dawnload App</button>
           </div>
         </div>
-
         <div class="banner-img">
           <img src="images/Images 2.png" alt="">
           <div class="box-1">
@@ -65,7 +63,6 @@
 
           <div class="box-2">
             <div class="div-ball">
-
             </div>
             <div class="text-box">
               <h1>350+</h1>
@@ -74,16 +71,10 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-      </di>
     </section>
   </header>
 
-
+  <!--havit section start-->
   <section class="habit-section">
     <h1 id="titel-habit">Change Your Habits</h1>
     <p id="habit-description">Start your day with clarity by dedicating 10 minutes to mindful meditation each morning
@@ -112,7 +103,7 @@
     </div>
   </section>
 
-
+  <!--run box section start-->
   <section class="runbox-section">
     <div class="runbox-container">
       <div class="runbox-text">
@@ -131,6 +122,7 @@
 
   </section>
 
+  <!--Bmi section start-->
   <section class="Bmi-section">
     <div class="titel-bmi">
       <h1>BMI Calculator</h1>
@@ -199,6 +191,7 @@
     </div>
   </section>
 
+  <!--meet section start-->
   <section class="meet-section">
     <div class="meet-header">
       <h1>Meet Our Team</h1>
@@ -252,6 +245,115 @@
 
     </div>
   </section>
+
+  <!--new section added name blog section-->
+  <section class="blog-section">
+    <div class="titel-blog">
+      <h1>Our Blog</h1>
+      <p>My resent website blog please see now</p>
+    </div>
+    <div class="blog-container">
+      <div class="blog">
+        <img src="images/exercise5.jpg" alt="">
+
+        <div class="body-text">
+          <p>13 Aug, 2024</p>
+          <br>
+          <h1>Flexibility and Strength Combined</h1>
+          <br>
+          <p>Yoga isn’t just for relaxation; it’s a powerful tool for athletes looking to improve flexibility, strength,
+            and mental
+            focus. Learn how incorporating yoga into your routine can enhance your overall athletic performance.
+          </p>
+          <br>
+          <br>
+          <p>More Details ..... <i class="fa-solid fa-arrow-right fa-2m"></i></p>
+
+        </div>
+      </div>
+      <div class="blog">
+        <img src="images/run.jpg" alt="">
+
+        <div class="body-text">
+          <p>13 Aug, 2024</p>
+          <br>
+          <h1>The Ultimate Guide to Strength Training</h1>
+          <br>
+          <p>Discover the key principles of strength training, from selecting the right weights to perfecting your form.
+            Whether
+            you're a beginner or an advanced lifter, this guide will help you take your workouts to the next level.
+          </p>
+          <br><br>
+          <p>More Details ..... <i class="fa-solid fa-arrow-right "></i></p>
+        </div>
+      </div>
+      <div class="blog">
+        <img src="images/trainer6.png" alt="">
+
+        <div class="body-text">
+          <p>13 Aug, 2024</p>
+          <br>
+          <h1>Top 5 Cardio Workouts for Weight Loss</h1>
+          <br>
+          <p>
+            Cardio is a crucial component of any fitness plan. Learn about the most effective cardio exercises that can
+            help you
+            shed pounds and improve your overall health, complete with tips on how to stay motivated.
+          </p>
+          <br><br>
+          <p>More Details ..... <i class="fa-solid fa-arrow-right"></i></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!--footer section start-->
+  <footer class="footer-section">
+    <div class="footer-container">
+
+
+      <div class="footer-logo-div">
+        <h1 class="logo">Fitness</h1>
+        <br>
+        <p>Dedicated to transforming lives through personalized workout plans and nutritional guidance. Whether you're a
+          beginner
+          or a fitness enthusiast, I'm here to help you reach your goals. Join me on a journey to a stronger, healthier
+          you! Let's
+          build the best version of yourself, one step at a time.</p>
+      </div>
+
+      <div class="footer-nab">
+        <h2>Get Clik Now</h2>
+
+        <ul class="footer-nav-items">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+
+      </div>
+
+
+
+      <div class="footer-nab">
+        <h2>Some information</h2>
+
+        <ul class="footer-nav-items">
+          <li>CEO : Tawhid Ahmed.</li>
+          <li>Total Trainer : Six Pepole.</li>
+          <li>Open : 7Am TO 10Pm</li>
+          <li>Phone : 01307664940</li>
+        </ul>
+
+      </div>
+
+    </div>
+    <hr width="1200px" style="margin: 40px auto">
+
+    <center><small style="color: gray;">All right reserved @Fitness 2024</small></center>
+  </footer>
 
 </body>
 
